prevent nav from  wrapping

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ header{
     padding:1rem 0;
 }
 
-@media (max-width:992px) {
+@media (max-width:1199px) {
     header .container{
         max-width: 100%;
     }
@@ -87,7 +87,7 @@ nav ul a.current{
     text-transform: uppercase;
 }
 
-@media (max-width:940px){
+@media (max-width:1100px){
     #nav-toggle{
         display:block;
     }
